adding list components

--- a/src/App.css
+++ b/src/App.css
@@ -42,4 +42,7 @@ button {
     background-color: #3e8e41;
     border-color: #3e8e41;
   }
-  
+  .active{
+    background-color: blue;
+    color: white;
+  }
