--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,6 @@
     color: blueviolet;
     animation: rotate 5s linear infinite;
   }
-  
-
 h3{
    color: red;
 }
@@ -42,7 +40,44 @@ button {
     background-color: #3e8e41;
     border-color: #3e8e41;
   }
-  .active{
-    background-color: blue;
-    color: white;
+  table {
+    width: 100%;
+    border-collapse: collapse;
   }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+    tr:hover {
+    background-color: red;
+    color: white; 
+  }
+  .active {
+    background-color: dodgerblue;
+    color: white;
+    border: 2px solid navy;
+    border-radius: 5px;
+    padding: 5px 10px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .nun {
+    background-color: mediumseagreen;
+    color: black;
+    border: 2px solid darkgreen;
+    border-radius: 5px;
+    padding: 5px 10px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .active:hover,
+  .nun:hover {
+    background-color: darkblue;
+  }
+  
