create a input ui and sum of two number

--- a/src/App.css
+++ b/src/App.css
@@ -80,4 +80,9 @@ button {
   .nun:hover {
     background-color: darkblue;
   }
-  
+  input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px; 
+    width: 200px; 
+  }
